# Truck-Platooning-3

./: .gitignore  CARLA_ROS2_PLATOONING_MEMO_2026-03-30.txt  CARLA_ROS2_PLATOONING_NEXT_SESSION_KO.md
src/carla-virtual-platoon/: CMakeLists.txt  NODE_ARCHITECTURE.md  README.md  package.xml
src/carla-virtual-platoon/config/: config.yaml
src/carla-virtual-platoon/include/: CarlaLocation.hpp  TruckControl.hpp  shared_carlalib.h
src/carla-virtual-platoon/launch/: autonomy_fleet.launch.py  autonomy_stack.launch.py  autonomy_structured.launch.py  control_stack.launch.py  perception_stack.launch.py  planning_stack.launch.py
src/carla-virtual-platoon/nodes/: TruckControl.cpp
src/carla-virtual-platoon/nodes/control/: control_node.py  controller_node.py  lateral_controller.py  longitudinal_controller.py  pid_controller.py
src/carla-virtual-platoon/nodes/fleet/: carla_pose_publisher.py  fleet_command_node.py  platoon_state.py
src/carla-virtual-platoon/nodes/perception/: autonomy_compact_node.py  debug_visualizer.py  front_vehicle_detector.py  lane_detection_node.py  lane_detector.py  lane_follower_legacy.py  lidar_obstacle_node.py  perception_node.py  stop_line_detection_node.py  stop_line_detector.py  yolo_detection_node.py
src/carla-virtual-platoon/nodes/planning/: behavior_fsm.py  behavior_fsm_node.py  local_planner.py  planning_node.py  platoon_planner.py
src/carla-virtual-platoon/src/: main.cpp
tools/: carla_cleanup_actors.py  carla_spectator_follow.py  fleet_debug_viewer.py  lane_debug_viewer.py  platoon_dashboard.py  speedometer_dashboard.py
